--- a/index.html
+++ b/index.html
@@ -180,10 +180,8 @@
                             <a href="https://chrome.google.com/webstore/detail/psdle/jdjhhapoddhnimgdemnpbfagndcnmhii" style='display:block'><img src="logo/ChromeWebStore_Badge_v2_206x58.png" alt="Available in the Chrome Web Store" /></a>
                             <small>Reviews of all kinds are appreciated!</small><br>
                             <br>
-                            <small>
-                                A Firefox extension was planned, but currently not being developed (due to SDK+AMO).<br>
-                                Have experience developing Firefox extensions? <a href="//github.com/RePod/psdle">Contact me!</a>
-                            </small><br>
+                            <a href="psdle.xpi" style='display:block'><img class="firefox-ext" src="logo/firefox-logo-horizontal-lockup.png" alt="Available as a Firefox extension" /></a>
+                            <small>Only for Firefox 57 ("Quantum") or newer.</small>
                         </div>
                         <div id='method_source' class="collapse text-center">
                             <div class="label label-primary method_info">
