--- a/index.html
+++ b/index.html
@@ -180,8 +180,7 @@
                             <a href="https://chrome.google.com/webstore/detail/psdle/jdjhhapoddhnimgdemnpbfagndcnmhii" style='display:block'><img src="logo/ChromeWebStore_Badge_v2_206x58.png" alt="Available in the Chrome Web Store" /></a>
                             <small>Reviews of all kinds are appreciated!</small><br>
                             <br>
-                            <a href="psdle.xpi" style='display:block'><img class="firefox-ext" src="logo/firefox-logo-horizontal-lockup.png" alt="Available as a Firefox extension" /></a>
-                            <small>Only for Firefox 57 ("Quantum") or newer.</small>
+                            <a href="https://addons.mozilla.org/en-US/firefox/addon/psdleforfirefox/" style='display:block'><img class="firefox-ext" src="logo/firefox-logo-horizontal-lockup.png" alt="Available as a Firefox add-on" /></a>
                         </div>
                         <div id='method_source' class="collapse text-center">
                             <div class="label label-primary method_info">
