Clean up extensions section

--- a/index.html
+++ b/index.html
@@ -177,10 +177,15 @@
                             <div class="label label-primary method_info">
                                 Unless otherwise noted, the following are for desktop browsers.
                             </div>
-                            <a href="https://chrome.google.com/webstore/detail/psdle/jdjhhapoddhnimgdemnpbfagndcnmhii" style='display:block'><img src="logo/ChromeWebStore_Badge_v2_206x58.png" alt="Available in the Chrome Web Store" /></a>
+                            <div class='exts'>
+                                <a href="https://chrome.google.com/webstore/detail/psdle/jdjhhapoddhnimgdemnpbfagndcnmhii">
+                                    <img src="logo/ChromeWebStore_Badge_v2_206x58.png" alt="Available in the Chrome Web Store" />
+                                </a>
+                                <a href="https://addons.mozilla.org/en-US/firefox/addon/psdleforfirefox/">
+                                    <img class="firefox-ext" src="logo/firefox-logo-horizontal-lockup.png" alt="Available as a Firefox add-on" />
+                                </a>
+                            </div>
                             <small>Reviews of all kinds are appreciated!</small><br>
-                            <br>
-                            <a href="https://addons.mozilla.org/en-US/firefox/addon/psdleforfirefox/" style='display:block'><img class="firefox-ext" src="logo/firefox-logo-horizontal-lockup.png" alt="Available as a Firefox add-on" /></a>
                         </div>
                         <div id='method_source' class="collapse text-center">
                             <div class="label label-primary method_info">
