Some GDPR stuff
Anonymize IP in GA, purely a Google thing.
Privacy policy updates.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- GA -->
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-            ga('create', 'UA-58660703-1', 'auto'); ga('send', 'pageview');
+            ga('set', 'anonymizeIp', true); ga('create', 'UA-58660703-1', 'auto'); ga('send', 'pageview');
         </script>
     </head>
     <body>
@@ -320,7 +320,7 @@
                     </div>
                     <!-- <small><strong>The following policy is only in regards to this website's use of Google Analytics. For PSDLE's see below.</strong></small><br> -->
                     <h4>Google Analytics:</h4>
-                    This website uses <a href="//www.google.com/analytics/">Google Analytics</a> to collect various non-identifiable information about you, the visitor, including but not limited to:
+                    This <strong>website</strong> uses <a href="//www.google.com/analytics/">Google Analytics</a> to collect various non-identifiable information about you, the visitor, including but not limited to:
                     <ul>
                         <li>How you reached this website <small>(another website, a search engine, etc.)</small></li>
                         <li>General browser and OS information <small>(Chrome/Firefox, Windows/OSX, screen resolution, mobile device, etc.)</small></li>
@@ -330,27 +330,18 @@
                     To repeat, all information collected through Google Analytics is non-identifiable, or <strong>anonymous</strong>.<br><br>
                     <strong>How and why I use the data collected:</strong>
                     <p>
-                    By analyzing the data I receive I can make educated decisions about my website design such as how users interact with features and prioritize functionality.<br>
-                    For instance, I noticed a significant portion of the site traffic is from mobile devices thus I have remade the website in <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a> to accomodate.
+                    Previously, while not surprising, the main website traffic was from mobile so the site was made with Bootstrap to accomodate.<br>
+                    <br>
+                    In current day, the analytics are primarily used for monitoring traffic sources to the website and Chrome extension store page to guage interest and conversation based on location and language. No behavioral tracking, profiling, etc. is performed.
                     </p>
                     <strong>Opting Out:</strong>
                     <p>
-                    If this policy is not to your liking, but you wish to continue using this page (not PSDLE) you may do so with <a href="//tools.google.com/dlpage/gaoptout">this add-on provided by Google.</a><br>
+                    If this policy is not to your liking, but you wish to continue using this page (not PSDLE) you may do so with <a href="//tools.google.com/dlpage/gaoptout">this add-on provided by Google.</a> or blocking Google Analytics outright with your preferred method such as an adblocker's privacy rules list.<br>
                     If the opt-out procedure is not to your liking I would advise ceasing use of this webpage completely.
                     </p>
-                    <!--<br>
-                    <h4>PayPal:</h4>
-                    <p>
-                        No transaction information is obtained from, stored at, or processed through this site.<br>
-                        When clicking the "Buy Now" button in the <a href="#support">Support PSDLE</a> section the browser is securely redirected to PayPal's site to proceed with the transaction.<br>
-                        <br>
-                        For more information, refer to <a href="https://www.paypal.com/us/webapps/mpp/ua/privacy-full">PayPal's Privacy Policy.</a>
-                    </p>-->
                     <br>
                     <h4>PSDLE:</h4>
-                    <strong>Full disclosure:</strong> I (RePod) develop PSDLE as a hobby for myself first, and release it for the public's benefit to further improve it and continue the cycle. Those concerned, but not well versed, with "security" will receive little sympathy from me, use it as you see fit.<br>
-                    <br>
-                    PSDLE is very powerful and provides a lot of functionality but requires various information, some of which may be personal.<br>
+                    PSDLE is very powerful and provides a lot of functionality but requires various information, some of which may be personal, however it only operates with complete user approval down to the method used and its activation.<br>
                     <br>
                     PSDLE accesses the following information when used:
                     <ul>
@@ -361,7 +352,7 @@
                     </ul>
                     Remaining PSDLE functionality is user-selectable (e.g. Catalog) and does not require additional personal information from what has been listed above.<br>
                     <br>
-                    Information collected during PSDLE's runtime is not permanently stored by PSDLE, and never will be. This means anything generated or requested by PSDLE is gone in the e-wind after the resource it was attached to is terminated (e.g. tab). An exception to this is the Chrome extension which runs a background task to determine if the store is active or not.
+                    Information collected during PSDLE's runtime is not permanently stored by PSDLE, and never will be. This means anything generated or requested by PSDLE is gone in the e-wind after the resource it was attached to is terminated (e.g. tab). An exception to this is the Chrome/Firefox extension which runs a background task to determine if the store is active or not.
                     If you would like to keep a permanent list please use the "Export View" function.<br>
                     <br>
                     PSDLE does not transmit any information to an external location. All resources requested or sent (Queue) are in the executed page's context and domain, which is typically the store.
