Clean up privacy policy, birthday nod.
Originally just for fluff, but now less fluff than before.

Also make it more obvious how old PSDLE is.

--- a/index.html
+++ b/index.html
@@ -325,13 +325,15 @@
                     </div>
                     <!-- <small><strong>The following policy is only in regards to this website's use of Google Analytics. For PSDLE's see below.</strong></small><br> -->
                     <h4>Google Analytics:</h4>
+                    <p>
                     This <strong>website</strong> uses <a href="//www.google.com/analytics/">Google Analytics</a> to collect various non-identifiable information about you, the visitor, including but not limited to:
                     <ul>
                         <li>How you reached this website <small>(another website, a search engine, etc.)</small></li>
                         <li>General browser and OS information <small>(Chrome/Firefox, Windows/OSX, screen resolution, mobile device, etc.)</small></li>
                         <li>And a lot more. For more information, please read <a href="//support.google.com/analytics/topic/2919631">Google's documentation about Analytics</a>.</li>
                     </ul>
-                    To repeat, all information collected through Google Analytics is non-identifiable, or <strong>anonymous</strong>.<br><br>
+                    To repeat, all information collected through Google Analytics is non-identifiable, or <strong>anonymous</strong>.
+                    </p>
                     <strong>How and why I use the data collected:</strong>
                     <p>
                     Previously, while not surprising, the main website traffic was from mobile so the site was made with Bootstrap to accomodate.<br>
@@ -352,20 +354,8 @@
                         <li>Purchase information for generating the list. <small>(PS+ status, time of purchase, etc.)</small></li>
                         <li>Console activation information. <small>(only if Queue is enabled)</small></li>
                         <li>Download Queue information. <small>(only if Queue is enabled)</small></li>
-                        <li>Store language. <small>(for determining language-specific things)</small></li>
                     </ul>
-                    Remaining PSDLE functionality is user-selectable (e.g. Catalog) and does not require additional personal information from what has been listed above.<br>
-                    <br>
-                    Information collected during PSDLE's runtime is not permanently stored by PSDLE, and never will be. This means anything generated or requested by PSDLE is gone in the e-wind after the resource it was attached to is terminated (e.g. tab). An exception to this is the Chrome/Firefox extension which runs a background task to determine if the store is active or not.
-                    If you would like to keep a permanent list please use the "Export View" function.<br>
-                    <br>
-                    PSDLE does not transmit any information to an external location. All resources requested or sent (Queue) are in the executed page's context and domain, which is typically the store.
-                    Other products or services may interfere with, tamper with, modify, or intercept information PSDLE obtains. This should not be a concern as a majority of the information is publicly available in the page context, PSDLE just caches it.<br>
-                    <br>
-                    In short, make your own decisions on who and <abbr title="Salty closed-minded people.">who not</abbr> to trust. It's the Internet, after all!
-                    <br>
-                    This privacy policy is unique to PSDLE and is provided out of generosity as it is not required by any means.<br>
-                    PSDLE's privacy policy may change at any time for any reason.
+                    Information collected during use is not permanently stored. If you would like to keep a permanent list please use the "Export View" function.
                 </div>
             </div>
             <div class="row hidden-xs hidden-sm">
@@ -405,6 +395,7 @@
                 Third-party content (icons, names) re-rendered by PSDLE is provided from the Entitlements API.<br>
                 Screenshots are for educational and informative purposes and are not hosted on this domain.<br>
                 <br>
+                <a href="https://github.com/RePod/psdle/commit/f38865703ca4805bdd4e8ac73868e4ef15e51f5a"><i class="fa fa-external-link fa-fw" ></i> PSDLE's birthday is July 3rd, 2014!</a><br>
                 April 5th is PSDLE Awareness Day, since 2015.
             </span>
         </div>
