--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <div class="col-md-12" style='text-align:center'>
                     <noscript>JavaScript is not enabled. It's not required but recommended.<br>
                     Google Analytics via JavaScript is also used (if possible), read privacy policy below for more info.<br><br></noscript>
+                    <a href="https://goo.gl/forms/4LQrF1KcgvP8WiA92"><button class="btn btn-primary" style="margin-bottom:1.5em">Participate in a PSDLE user survey!</button></a><br>
                     <div class="hidden-md hidden-lg">
                         <a id="imgur_album" href="//imgur.com/a/GD3Eb" target="_blank"><button class="btn btn-primary btn-block"><i class="fa fa-image fa-fw"></i> View screenshots on Imgur!</button></a>
                     </div>
