--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <li><a href="#features"><i class="fa fa-star fa-fw"></i> Features</a></li>
                         <li><a href="#getting_started"><i class="fa fa-check-square-o fa-fw"></i> Getting Started</a></li>
                         <li><a href="#paq"><i class="fa fa-question fa-fw"></i> Potentially Asked Questions</a></li>
-                        <li><a href="#support"><i class="fa fa-thumbs-up fa-fw"></i> Support PSDLE</a></li>
+                        <li><a href="#support"><i class="fa fa-thumbs-up fa-fw"></i> Support/Contact PSDLE</a></li>
                         <li><a href="#privacy"><i class="fa fa-eye fa-fw"></i> Privacy Policy</a></li>
                         <!-- </ul></li> -->
                     </ul>
@@ -216,6 +216,9 @@
                     <div class="page-header">
                         <h3 id="paq"><i class="fa fa-question fa-fw"></i> Potentially Asked Questions (P.A.Q.)</h3>
                     </div>
+                    <strong>I need personalized help.</strong><br>
+                    Visit the <a href="#support">support section</a> for contacts.<br>
+                    <br>
                     <strong>Is this safe or a ploy to phish account details?</strong><br>
                     Yes it is safe, no it is not for phishing account details. I put it on GitHub for a reason, <a href="//github.com/RePod/psdle/">feel free to view the horribly effective code yourself and decide.</a><br>
                     <br>
@@ -305,13 +308,14 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="page-header">
-                        <h3 id="support"><i class="fa fa-thumbs-up fa-fw"></i> Support PSDLE</h3>
+                        <h3 id="support"><i class="fa fa-thumbs-up fa-fw"></i> Support PSDLE / Contact developer</h3>
                     </div>
                     <strong>Messages asking for support for programs/utilities other than PSDLE will be ignored.</strong><br>
                     <br>
                     I may be contacted directly at (for support, feedback, or otherwise):
                     <ul>
                         <li><a href='https://www.reddit.com/message/compose?to=RePod37&amp;subject=PSDLE' style='font-style:oblique;'><i class='fa fa-reddit-alien fa-fw'></i> @RePod37</a></li>
+                        <li><a href='https://twitter.com/RePod37' style='font-style:oblique;'><i class='fa fa-twitter fa-fw'></i> @RePod37</a></li>
                         <li><a href="mailto:repod.psdle@gmail.com" style='font-style:oblique;'><i class='fa fa-envelope fa-fw'></i> repod.psdle@gmail.com</a>.</li>
                     </ul>
                     If you would like to buy me a beer drinking simulator, I accept Steam currency!<br>
