Recommend VM instead of GM for FF.
See #60

--- a/index.html
+++ b/index.html
@@ -160,7 +160,9 @@
                                 Userscript: Run a saved, local version. Automaticlly updates.
                             </div>
                             <ol>
-                                <li>Install <a href="https://addons.mozilla.org/en-US/firefox/addon/greasemonkey/" target="_blank">Greasemonkey</a> <small>(<i class="fa fa-firefox"></i> Firefox)</small>, <a href="https://chrome.google.com/webstore/detail/violentmonkey/jinjaccalgkegednnccohejagnlnfdag" target="_blank">Violentmonkey</a> <small>(<i class="fa fa-chrome"></i> Chrome)</small>, or equivalent.</li>
+                                <!-- https://addons.mozilla.org/en-US/firefox/addon/greasemonkey/ -->
+                                <li>Install Violentmonkey</a> (<a href="https://addons.mozilla.org/en-US/firefox/addon/violentmonkey/" target="_blank"><i class="fa fa-firefox"></i> Firefox</a>, <a href="https://chrome.google.com/webstore/detail/violentmonkey/jinjaccalgkegednnccohejagnlnfdag" target="_blank"><i class="fa fa-chrome"></i> Chrome</a>), or equivalent.</li>
+                                    <ul><li><small>Traditional Greasemonkey for Firefox has an <a href="https://github.com/RePod/psdle/issues/60" target="_blank">issue</a>.</small></li></ul>
                                 <li>Install the <a id="inline_userscript" href="psdle.user.js">PSDLE userscript</a>.</li>
                                 <li>Navigate to the online store.</li>
                                 <li>PSDLE should activate automatically.</li>
