Point users to Twitter
Put the fire out a little bit.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
         </nav>
         <div class="container">
             <div class="row">
+                <div class="col-md-12">
+                    <a href="https://twitter.com/RePod37/" target="_blank"><button class="btn btn-primary btn-block"><i class="fa fa-info fa-fw"></i> PSDLE is broken with the new store. For updates see Twitter (click) or the GitHub repo.<br>The site will be the slowest thing to update.</button></a>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-md-12" style='text-align:center'>
                     <noscript>JavaScript is not enabled. It's not required but recommended.<br>
                     Google Analytics via JavaScript is also used (if possible), read privacy policy below for more info.<br><br></noscript>
